--- a/style.css
+++ b/style.css
@@ -39,4 +39,31 @@ body {
   left: -25%;
 }
 
+.text-section {
+  display: grid;
+  height: 100%;
+  padding: 5rem 5rem 5rem 2rem;
+  grid-template-rows: auto 1fr;
+}
+.text-section h1 {
+  font-size: 2rem;
+  font-weight: 700;
+  margin-bottom: 2rem;
+}
+.text-section ul {
+  list-style-type: none;
+  line-height: 1rem;
+}
+.text-section ul li {
+  padding: 1rem 0;
+  border-bottom: 1px solid #e7e7e9;
+}
+.text-section ul li .question {
+  font-size: 0.9rem;
+}
+.text-section ul li .answer {
+  padding-top: 1rem;
+  display: none;
+}
+
 /*# sourceMappingURL=style.css.map */
