--- a/style.scss
+++ b/style.scss
@@ -47,3 +47,30 @@ body {
         left: -25%;
     }
 }
+
+.text-section {
+    display: grid;
+    height: 100%;
+    padding: 5rem 5rem 5rem 2rem;
+    grid-template-rows: auto 1fr;
+    h1 {
+        font-size: 2rem;
+        font-weight: 700;
+        margin-bottom: 2rem;
+    }
+    ul {
+        list-style-type: none;
+        line-height: 1rem;
+        li {
+            padding: 1rem 0;
+            border-bottom: 1px solid $light-grayish-blue;
+            .question {
+                font-size: .9rem;
+            }
+            .answer {
+                padding-top: 1rem;
+                display: none;
+            }
+        }
+    }
+}
