--- a/style.css
+++ b/style.css
@@ -32,6 +32,7 @@ body {
   border-radius: 1rem;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 .container > img {
   position: relative;
@@ -42,7 +43,7 @@ body {
 .text-section {
   display: grid;
   height: 100%;
-  padding: 5rem 5rem 5rem 2rem;
+  padding: 5rem 5rem 0 2rem;
   grid-template-rows: auto 1fr;
 }
 .text-section h1 {
@@ -64,6 +65,12 @@ body {
 .text-section ul li .answer {
   padding-top: 1rem;
   display: none;
+}
+.text-section ul li.active .question {
+  font-weight: 700;
+}
+.text-section ul li.active .answer {
+  display: block;
 }
 
 /*# sourceMappingURL=style.css.map */
