--- a/style.scss
+++ b/style.scss
@@ -41,6 +41,7 @@ body {
     border-radius: 1rem;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     & > img {
         position: relative;
         top: 40%;
@@ -51,7 +52,7 @@ body {
 .text-section {
     display: grid;
     height: 100%;
-    padding: 5rem 5rem 5rem 2rem;
+    padding: 5rem 5rem 0 2rem;
     grid-template-rows: auto 1fr;
     h1 {
         font-size: 2rem;
@@ -70,6 +71,12 @@ body {
             .answer {
                 padding-top: 1rem;
                 display: none;
+            }
+            &.active .question {
+                font-weight: 700;
+            }
+            &.active .answer {
+                display: block;
             }
         }
     }
