--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
   padding: 0;
   box-sizing: border-box;
   font-family: "Kumbh Sans", sans-serif;
+  color: #4a4b5e;
 }
 
 html {
@@ -89,16 +90,44 @@ body {
 }
 .text-section ul li .question {
   font-size: 0.9rem;
+  cursor: pointer;
+  position: relative;
+}
+.text-section ul li .question:hover {
+  color: #f47c57;
+}
+.text-section ul li .question:after {
+  content: "";
+  position: absolute;
+  background-image: url("/images/icon-arrow-down.svg");
+  background-repeat: no-repeat;
+  top: 25%;
+  right: 0;
+  width: 1rem;
+  height: 1rem;
+  transition: all 0.2s ease-out;
 }
 .text-section ul li .answer {
-  padding-top: 1rem;
-  display: none;
+  overflow: hidden;
+  max-height: 0;
+  color: #787887;
+  transition: max-height 0.2s ease-out;
 }
 .text-section ul li.active .question {
   font-weight: 700;
 }
+.text-section ul li.active .question:hover {
+  color: #4a4b5e;
+}
+.text-section ul li.active .question:after {
+  transform: rotate(180deg);
+  top: -25%;
+  right: 2%;
+}
 .text-section ul li.active .answer {
+  padding-top: 1rem;
   display: block;
+  max-height: 3rem;
 }
 @media screen and (max-width: 900px) {
   .text-section {
